# icarus

./: CMakeLists.txt  README.md  config.ini
include/: accumulator.hpp  config.hpp  detector.hpp  imageframe.hpp  logger.hpp  motiondetector.hpp  sentry.hpp  tamperingdetector.hpp  video.hpp
src/: accumulator.cpp  config.cpp  differencedetector.cpp  imageframe.cpp  logger.cpp  main.cpp  motiondetector.cpp  sentry.cpp  tamperingdetector.cpp  video.cpp
